--- a/changes.txt
+++ b/changes.txt
@@ -1,4 +1,27 @@
+JV:
 nao consegui fazer muita coisa, só atualizei o makefile e corrigi uns errinhos pra conseguir compilar
 o codigo quando tenta instanciar um objeto da segmentation fault
 também fiz uma chinelagem no matrices.h, depois acho que é melhor passar todas as funções inline do header pra
 um matrices.cpp da vida.
+
+--
+Eduarda:
+- Arquivos object.h e object.cpp: comentei o construtor dos guris pq eles mudaram o construtor original do sor.
+Tentei rodar com o construtor deles, quebrou tudo igual, mas tinha um erro na declaração do construtor original
+do sor no object.h (precisava especificar que um argumento era NULL e o outro era TRUE).
+
+- Arquivos gpuFunction.cpp e gpuFunction.h (vulgo gpuProgramController): botei só os atributos que fazem sentido para nós. 
+Código todo do sor, então ficou como a dos guris.
+
+- Arquivo load_shader.h (vulgo shaders.h): código todo do sor. Copy and Paste.
+
+- Arquivo CMakeLists: tava dando um erro que os arquivos .cpp adicionais não estavam sendo linkados. Aí adicionei todos os cpp
+no SOURCE (não sei se isso está correto ou se é zuado).
+
+- Arquivo main: tentei deixar na main o que os guris deixaram na main, mas ainda tem as coisas de câmera ali... Só que pra fazer os
+arquivos da câmera precisa fazer o arquivo de entidade. Aí achei melhor a gente resolver os erros que temos até agora, pra não
+acumular os bugs, mas se quiser pode tentar.
+
+- Problema: aparentemente, o código tenta desenhar a esfera (primeiro objeto a ser desenhado) e tudo quebra. Me da uma raiva pq o terminal
+imprime "Ok." e segundos depois tudo quebra. Talvez o erro seja a função de desenho da GPU esteja zuada no momento, pq a função original
+DrawVirtualObject é diferente.
